# ResurrectionMoeyu

./: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: voice.json
app/src/main/assets/model/: moeyu.moc
app/src/main/assets/voice/: 001.okk  002_1a.okk  002_1b.okk  002_1c.okk  002_2a.okk  002_2b.okk  002_2c.okk  003.okk  004.okk  005.okk  006.okk  007.okk  008.okk  009.okk  010.okk  011.okk  012.okk  013.okk  014.okk  015.okk  016.okk  017.okk  018.okk  019.okk  020.okk  021.okk  022.okk  023.okk  024.okk  025.okk  026.okk  027.okk  028.okk  029.okk  030.okk  031.okk  032.okk  033.okk  034.okk  035.okk  (+317 more)
app/src/main/assets/voice_cn/: 015.okk  016.okk  017.okk  018.okk  019.okk  020.okk  021.okk  022.okk  023.okk  024.okk  025.okk  026.okk  027.okk  028.okk  029.okk  031.okk  032.okk  033.okk  034.okk  035.okk  036.okk  037.okk  038.okk  039.okk  040.okk  041.okk  042.okk  043.okk  044.okk  045.okk  046.okk  047.okk  048.okk  049.okk  050.okk  051.okk  052.okk  053.okk  054.okk  055.okk  (+234 more)
app/src/main/java/jp/: a.java
app/src/main/res/anim/: common_fadeout.xml  input_coin.xml  item_fadeout.xml  output_gachapon.xml  spa_smoke.xml  spa_water_back.xml  spa_water_front.xml  whitein.xml  whiteout.xml
app/src/main/res/drawable/: preference_bg_repeat.xml  room_bg_repeat.xml  toggle_bg.xml
app/src/main/res/layout/: activity_bath.xml  activity_collectionroom.xml  activity_gatya.xml  activity_gatya_result.xml  activity_main.xml  (+20 more)
dev_tools/okk/: CMakeLists.txt  ogg2okk.c  okk2ogg.c
gradle/wrapper/: gradle-wrapper.properties
(+409 files in other folders)
